# Usami

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  usami.natvis
usami-common/: CMakeLists.txt
usami-common/include/usami/: camera.h  color.h  common.h  image.h  mesh.h  model.h  sampler.h  texture.h
usami-common/include/usami/math/: basic_vector.h  distribution.h  math.h  math_def.h  matrix.h  point.h  random.h  sampling.h  static_math.h  vector.h
usami-common/include/usami/memory/: arena.h  buffer.h  ptr-arithmetic.h
usami-common/include/usami/texture/: constant.h  image.h  test.h
usami-common/src/usami/: camera.cpp  image.cpp  mesh.cpp  model.cpp
usami-common/src/usami/texture/: image.cpp
usami-raster/: CMakeLists.txt
usami-raster/include/usami/raster/: camera.h  canvas.h  context.h  render.h  scene.h  shader.h
usami-raster/src/usami/raster/: camera.cpp  canvas.cpp
usami-ray/: CMakeLists.txt
usami-ray/include/usami/ray/: bbox.h  bsdf.h  camera.h  canvas.h  integrator.h  light.h  material.h  primitive.h  ray.h  render.h  scene.h
usami-ray/include/usami/ray/bsdf/: bsdf_geometry.h  lambertian.h  microfacet.h  specular.h
usami-ray/include/usami/ray/composite/: bvh.h  naive.h
usami-ray/include/usami/ray/integrator/: normal_mapping.h  path_tracing.h
usami-ray/include/usami/ray/light/: diffuse.h  distant.h  infinite.h  point.h  spot.h
usami-ray/include/usami/ray/material/: diffuse.h  matalic_roughness.h
usami-ray/include/usami/ray/primitive/: geometric.h  mesh.h  triangle_mesh.h
usami-ray/include/usami/ray/primitive/embree/: triangle.h
usami-ray/include/usami/ray/scene/: embree.h  integrated.h
usami-ray/include/usami/ray/shape/: disk.h  empty.h  rect.h  sphere.h  triangle.h
usami-ray/src/usami/ray/: canvas.cpp  empty.cpp  light.cpp
usami-ray/src/usami/ray/composite/: bvh.cpp
usami-ray/src/usami/ray/integrator/: normal_mapping.cpp  path_tracing.cpp
usami-ray/src/usami/ray/scene/: embree.cpp
usami-shell/: CMakeLists.txt
usami-shell-gui/: CMakeLists.txt
usami-shell-gui/src/: main.cpp
usami-shell/src/: main.cpp
